# fastapi-semantic-versioning-

./: README.md  pyproject.toml
.github/workflows/: release.yml
app/: main.py
